# SudokuTrainer

./: .coveragerc  .gitignore  README.md  REDME.md  pyproject.toml  tasks.py
data/: database.sqlite
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: tehtava1.md  tehtava2.md  tehtava3.md  tehtava4.md
src/: build.py  config.py  database_connection.py  initialize_database.py  main.py
src/entities/: statistic.py  sudoku.py
src/repositories/: statistic_repository.py
src/services/: gameService.py  game_service.py  statistic_service.py
src/tests/: gameService_test.py
src/tests/repositories/: statistic_repository_test.py
src/tests/services/: game_service_test.py  statistic_service_test.py
src/ui/: button.py  drawSudoku.py  draw_screens.py  draw_sudoku.py  gameUI.py  game_UI.py  objects.py  playSudoku.py  save_time_popup.py  start.py  statistics_view.py  sudoku9.py  ui.py
